[build-system]
requires = [
    "setuptools>=42",
    "versioningit >= 1.1.1",
]

build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.2.5"
testpaths = ["swaggerpy_test",]
norecursedirs = ["docs",]
log_cli =  false
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE",]
addopts = "--strict-markers"
markers = "subscript"

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "def __repr__",
]

[tool.black]
line-length = 90
skip-string-normalization = true
include = '\.py$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | docs
  | dist
  | swaggerpy_test
)/
'''

[tool.pycln]
all = true

[tool.isort]
line_length = 72
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}"

[tool.versioningit.write]
file = "swaggerpy/_version.py"

[tool.bandit]
exclude_dirs = ["docs", "swaggerpy_test"]
