[metadata]
name = swaggerpy
version = attr: swaggerpy.__version__
description = swaggerpy is a library for accessing Swagger-enabled APIs
url = https://github.com/digium/swagger-py
author = Digium, Inc.
email = dlee@digium.com
maintainer = VCTLabs, Inc.
maintainer_email = answers@vctlabs.com
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license_expression = BSD 3-Clause License
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    ARI
    Asterisk
    Swagger

[options]
python_requires = >= 3.6
install_requires =
    requests
    six
    websocket-client

packages = find:

[options.packages.find]
exclude =
    docs*
    swaggerpy_test*

[options.entry_points]
console_scripts =
    swagger-codegen = swaggerpy.codegen:main

# extra deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
doc =
    sphinx
    sphinx_git
    recommonmark
    sphinx_rtd_theme
    sphinxcontrib-apidoc
test =
    httpretty
    pytest
    pytest-cov
cov =
    covdefaults
    coverage[toml]
all =
    %(cov)s
    %(doc)s
    %(test)s

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    swaggerpy_test

max-line-length = 90
